@@ -1,5 +1,11 @@
 2011-12-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* src/jtag.h: Get rid of bogus fuse definition enum values
+	(would only match on some devices anyway); bump
+	MAX_FLASH_PAGE_SIZE and MAX_EEPROM_PAGE_SIZE for Xmega (though
+	that's currently not really usable).
+2011-12-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* src/jtag.h: Get rid of the global variable global_p_device_def,
 	replacing it by public member deviceDef
 	* src/remote.cc: (Dito.)
